added setup so everything is cleanly setup (you don't say)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       image: wem/wem_app
       volumes:
           - ./application:/app
+          - ./save:/save
       env_file:
         - ./application/.env
       ports:
