linking app to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       volumes:
           - ./application:/app
           - ./save:/save
+          - ./indexdir:/indexdir
       env_file:
         - ./application/.env
       ports:
