add category indexer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
           - ./application:/app
           - ./save:/save
           - ./indexdir:/indexdir
+          - ./dict:/dict
       env_file:
         - ./application/.env
       ports:
