--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ var/
 *.egg
 indexdir/*
 save/
+toolindexdir/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
