--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
           - ./save:/save
           - ./indexdir:/indexdir
           - ./dict:/dict
+          - ./toolindexdir:/toolindexdir
       env_file:
         - ./application/.env
       ports:
