add setting file, improve indexer, add language, category and tool

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,8 @@ services:
       volumes:
           - ./application:/app
           - ./save:/save
-          - ./indexdir:/indexdir
           - ./dict:/dict
-          - ./toolindexdir:/toolindexdir
+          - ./index:/index
       env_file:
         - ./application/.env
       ports:
