--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
-indexdir/*
 save/
-toolindexdir/*
+index/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
